new subs to cloud

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-    <title>server-B</title>
+    <title>Gateway</title>
     
 </head>
 
@@ -10,7 +10,7 @@
 <template name="testList">
 <div class="container">
     <div class="well frame">
-    Server B
+    GateWay
 
     <a href="#" class="insert">Insert</a>
     <a href="#" class="delete">Delete</a>
